--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <body>
 <button onclick="window.open('https://example.com', '_blank')">Open External Link</button>
     
+    <a onclick="window.open('https://www.google.co.in/', '_system');" href="#">Google</a>
+    
   </body>
   
 </html>
