--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script>
     function showAlert() {
       if (confirm("Do you want to open the link in your browser?")) {
-        window.open("https://example.com", "_blank");
+        window.open("com-apple-mobilesafari-tab:https://google.com", "_blank");
       }
     }
   </script>
