--- a/index.html
+++ b/index.html
@@ -1,19 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alert with Link</title>
-</head>
-<body>
-  <button onclick="showAlert()">Click Me</button>
-
-  <script>
-    function showAlert() {
-      if (confirm("Do you want to open the link in your browser?")) {
-        window.open("com-apple-mobilesafari-tab:https://google.com", "_blank");
-      }
+<script>
+    var str = navigator.userAgent;
+    var i = str.indexOf("Instagram");
+    if (i != -1) {
+      document.write("<a target=\"_blank\" href=\"http://instagram.com/?nibrowser=no\">Proceed to Sfari</a>");
+      window.stop();
     }
-  </script>
-</body>
-</html>
+</script>
