--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<script>
-    var str = navigator.userAgent;
-    var i = str.indexOf("Instagram");
-    if (i != -1) {
-      document.write("<a target=\"_blank\" href=\"http://instagram.com/?nibrowser=no\">Proceed to Sfari</a>");
-      window.stop();
-    }
-</script>
+<a target="_blank" href="http://mypage.com/?nibrowser=no"> mypage.com</a>
