--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<a target="_blank" href="http://mypage.com/?nibrowser=no"> mypage.com</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <base target="_top">
+  </head>
+  <body>
+    Link: <a href='x-safari-https://www.hailaran.es' target="_blank">Link 1</a>
+  </body>
+</html>
