--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     Link: <a href='x-safari-https://www.hailaran.es' target="_blank">Link 1</a>
+    Link: <a href='https://www.hailaran.es' target="_blank">Link 1</a>
   </body>
 </html>
