--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
+<script type="text/javascript">
+if( /iPhone/i.test(navigator.userAgent) ) && (window.location.href == "https://www.hailaran.es"){
+window.location = "x-safari-https://www.hailaran.es";
+}
+</script>
   <head>
     <base target="_top">
   </head>
   <body>
     Link: <a href='x-safari-https://www.hailaran.es' target="_blank">Link 1</a>
     Link: <a href='https://www.hailaran.es' target="_blank">Link 1</a>
+
+
+
+    
   </body>
 </html>
